--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "ejs": "~2.3.1",
     "express": "~4.12.0",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
-    "express-partials": "*"
+    "serve-favicon": "~2.2.0"
   }
 }
